Fix background on mobile

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -67,8 +67,7 @@ body{
 		}
 
 		.background{
-			background-image: url('../images/bg_about_640.jpg');
-			background: center top no-repeat;
+			background: url('../images/bg_about_640.jpg') center top no-repeat;
 			position: relative;
 			background-size: 100%;
 			height: 160px;
